tests/lean/doLetLoop.lean.expected.out
doLetLoop.lean:4:0: error: unexpected end of input
doLetLoop.lean:3:2-3:8: error: failed to synthesize
  Decidable sorry

Additional diagnostic information may be available using the `set_option diagnostics true` command.
